--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <div class="tips-tricks">
                 <h3>Did you know?</h3>
                 <ul id="tips-list">
-                    <li><a href="#">Lorem</a></li>
-                    <li><a href="#">Ipsum</a></li>
-                    <li><a href="#">Dolor</a></li>
+                    <li><a href="#" class="link-text">Lorem</a></li>
+                    <li><a href="#" class="link-text">Ipsum</a></li>
+                    <li><a href="#" class="link-text">Dolor</a></li>
                 </ul>
             </div>
         </section>
